[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/font/Lato/Lato-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/levels/MainLevel.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI/Pause.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/characters/HandOfFortune.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enviroment/TileMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/characters/Food.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/characters/It.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/audio/music/2020_04 Sheep it alive - dead.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/music/2020_04 Sheep it alive - level.ogg" type="AudioStream" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -32.0824, -32, 0, 0, 0, 0, 493.351, -12.826, 0, 0, 0, 0, 499.392, 266.622, 0, 0, 0, 0, -19.4713, 289.593, 0, 0, 0, 0, -32.0824, -24.343, 0, 0, 0, 0, -32.0824, -24.343 )
}

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="MainLevel1" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" parent="." instance=ExtResource( 5 )]

[node name="Ground" parent="TileMap" index="0"]
tile_data = PoolIntArray( 2, 0, 65537, 131077, 0, 0, 131078, 0, 1, 131079, 0, 1, 131080, 0, 1, 131081, 0, 1, 131082, 0, 1, 131083, 0, 1, 131084, 0, 1, 131085, 0, 1, 131086, 0, 1, 131087, 0, 1, 131088, 0, 1, 131089, 0, 1, 131090, 0, 1, 131091, 0, 1, 131092, 0, 1, 131093, 0, 1, 131094, 0, 1, 131095, 0, 1, 131096, 0, 1, 131097, 0, 1, 131098, 0, 1, 131099, 0, 2, 196612, 0, 0, 196613, 0, 327681, 196614, 0, 458753, 196615, 0, 458753, 196616, 0, 458752, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 458754, 196621, 0, 65537, 196622, 0, 458752, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65537, 196627, 0, 458754, 196628, 0, 65537, 196629, 0, 458752, 196630, 0, 65537, 196631, 0, 65537, 196632, 0, 65537, 196633, 0, 65537, 196634, 0, 458752, 196635, 0, 65538, 262147, 0, 0, 262148, 0, 327681, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 458752, 262153, 0, 65537, 262154, 0, 458752, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 458753, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 458753, 262163, 0, 65537, 262164, 0, 65537, 262165, 0, 65537, 262166, 0, 65537, 262167, 0, 458752, 262168, 0, 65537, 262169, 0, 65537, 262170, 0, 65537, 262171, 0, 65538, 327682, 0, 0, 327683, 0, 327681, 327684, 0, 65537, 327685, 0, 458753, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 458752, 327693, 0, 458754, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65537, 327699, 0, 65537, 327700, 0, 65537, 327701, 0, 458752, 327702, 0, 65537, 327703, 0, 65537, 327704, 0, 65537, 327705, 0, 65537, 327706, 0, 65537, 327707, 0, 65538, 393218, 0, 65536, 393219, 0, 458752, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 458754, 393232, 0, 458752, 393233, 0, 65537, 393234, 0, 65537, 393235, 0, 65537, 393236, 0, 458752, 393237, 0, 65537, 393238, 0, 65537, 393239, 0, 65537, 393240, 0, 65537, 393241, 0, 65537, 393242, 0, 458754, 393243, 0, 65538, 458754, 0, 65536, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 458752, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 458752, 458764, 0, 65537, 458765, 0, 458753, 458766, 0, 458752, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65537, 458771, 0, 65537, 458772, 0, 458752, 458773, 0, 65537, 458774, 0, 458752, 458775, 0, 65537, 458776, 0, 65537, 458777, 0, 458754, 458778, 0, 65537, 458779, 0, 65538, 524290, 0, 65536, 524291, 0, 65537, 524292, 0, 458753, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 458754, 524300, 0, 458754, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 458754, 524305, 0, 65537, 524306, 0, 65537, 524307, 0, 458754, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65537, 524311, 0, 65537, 524312, 0, 65537, 524313, 0, 65537, 524314, 0, 65537, 524315, 0, 65538, 589826, 0, 65536, 589827, 0, 65537, 589828, 0, 458753, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 458752, 589838, 0, 65537, 589839, 0, 65537, 589840, 0, 65537, 589841, 0, 65537, 589842, 0, 65537, 589843, 0, 65537, 589844, 0, 65537, 589845, 0, 65537, 589846, 0, 65537, 589847, 0, 65537, 589848, 0, 65537, 589849, 0, 65537, 589850, 0, 65537, 589851, 0, 65538, 655362, 0, 65536, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 458753, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 458754, 655374, 0, 65537, 655375, 0, 458754, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 65537, 655379, 0, 65537, 655380, 0, 458754, 655381, 0, 65537, 655382, 0, 65537, 655383, 0, 65537, 655384, 0, 65537, 655385, 0, 65537, 655386, 0, 262144, 655387, 0, 131074, 720898, 0, 65536, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 458754, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 458753, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65537, 720920, 0, 65537, 720921, 0, 262144, 720922, 0, 131074, 786434, 0, 65536, 786435, 0, 458754, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 458753, 786440, 0, 458753, 786441, 0, 458753, 786442, 0, 458754, 786443, 0, 65537, 786444, 0, 458754, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 458754, 786453, 0, 65537, 786454, 0, 65537, 786455, 0, 458753, 786456, 0, 262144, 786457, 0, 131074, 851970, 0, 131072, 851971, 0, 131073, 851972, 0, 131073, 851973, 0, 131073, 851974, 0, 131073, 851975, 0, 131073, 851976, 0, 131073, 851977, 0, 131073, 851978, 0, 131073, 851979, 0, 131073, 851980, 0, 131073, 851981, 0, 131073, 851982, 0, 131073, 851983, 0, 131073, 851984, 0, 131073, 851985, 0, 131073, 851986, 0, 131073, 851987, 0, 131073, 851988, 0, 131073, 851989, 0, 131073, 851990, 0, 131073, 851991, 0, 131073, 851992, 0, 131074 )

[node name="Water" parent="TileMap" index="1"]
tile_data = PoolIntArray( -1, 0, 1, -65536, 0, 2, -65535, 0, 2, -65534, 0, 2, -65533, 0, 2, -65532, 0, 2, -65531, 0, 2, -65530, 0, 2, -65529, 0, 2, -65528, 0, 2, -65527, 0, 2, -65526, 0, 2, -65525, 0, 2, -65524, 0, 2, -65523, 0, 2, -65522, 0, 2, -65521, 0, 2, -65520, 0, 2, -65519, 0, 2, -65518, 0, 2, -65517, 0, 2, -65516, 0, 2, -65515, 0, 2, -65514, 0, 2, -65513, 0, 2, -65512, 0, 2, -65511, 0, 2, -65510, 0, 2, -65509, 0, 2, -65508, 0, 2, -65507, 0, 2, -65506, 0, 3, 65535, 0, 65537, 0, 0, 65538, 1, 0, 65538, 2, 0, 65538, 3, 0, 65538, 4, 0, 65538, 5, 0, 65538, 6, 0, 65538, 7, 0, 65538, 8, 0, 65538, 9, 0, 65538, 10, 0, 65538, 11, 0, 65538, 12, 0, 65538, 13, 0, 65538, 14, 0, 65538, 15, 0, 65538, 16, 0, 65538, 17, 0, 65538, 18, 0, 65538, 19, 0, 65538, 20, 0, 65538, 21, 0, 65538, 22, 0, 65538, 23, 0, 65538, 24, 0, 65538, 25, 0, 65538, 26, 0, 65538, 27, 0, 65538, 28, 0, 65538, 29, 0, 65538, 30, 0, 65539, 131071, 0, 65537, 65536, 0, 65538, 65537, 0, 65538, 65538, 0, 65538, 65539, 0, 65538, 65540, 0, 262145, 65541, 0, 131074, 65542, 0, 131074, 65543, 0, 131074, 65544, 0, 131074, 65545, 0, 131074, 65546, 0, 131074, 65547, 0, 131074, 65548, 0, 131074, 65549, 0, 131074, 65550, 0, 131074, 65551, 0, 131074, 65552, 0, 131074, 65553, 0, 131074, 65554, 0, 131074, 65555, 0, 131074, 65556, 0, 131074, 65557, 0, 131074, 65558, 0, 131074, 65559, 0, 131074, 65560, 0, 131074, 65561, 0, 131074, 65562, 0, 131074, 65563, 0, 131074, 65564, 0, 65538, 65565, 0, 65538, 65566, 0, 65539, 196607, 0, 65537, 131072, 0, 65538, 131073, 0, 65538, 131074, 0, 65538, 131075, 0, 262145, 131076, 0, 131075, 131100, 0, 65537, 131101, 0, 65538, 131102, 0, 65539, 262143, 0, 65537, 196608, 0, 65538, 196609, 0, 65538, 196610, 0, 262145, 196611, 0, 131075, 196636, 0, 65537, 196637, 0, 65538, 196638, 0, 65539, 327679, 0, 65537, 262144, 0, 65538, 262145, 0, 262145, 262146, 0, 131075, 262172, 0, 65537, 262173, 0, 65538, 262174, 0, 65539, 393215, 0, 65537, 327680, 0, 65538, 327681, 0, 65539, 327708, 0, 65537, 327709, 0, 65538, 327710, 0, 65539, 458751, 0, 65537, 393216, 0, 65538, 393217, 0, 65539, 393244, 0, 65537, 393245, 0, 65538, 393246, 0, 65539, 393272, 0, 0, 524287, 0, 65537, 458752, 0, 65538, 458753, 0, 65539, 458780, 0, 65537, 458781, 0, 65538, 458782, 0, 65539, 589823, 0, 65537, 524288, 0, 65538, 524289, 0, 65539, 524316, 0, 65537, 524317, 0, 65538, 524318, 0, 65539, 655359, 0, 65537, 589824, 0, 65538, 589825, 0, 65539, 589852, 0, 65537, 589853, 0, 65538, 589854, 0, 65539, 720895, 0, 65537, 655360, 0, 65538, 655361, 0, 65539, 655388, 0, 65537, 655389, 0, 65538, 655390, 0, 65539, 786431, 0, 65537, 720896, 0, 65538, 720897, 0, 65539, 720923, 0, 1, 720924, 0, 327682, 720925, 0, 65538, 720926, 0, 65539, 851967, 0, 65537, 786432, 0, 65538, 786433, 0, 65539, 786458, 0, 1, 786459, 0, 327682, 786460, 0, 65538, 786461, 0, 65538, 786462, 0, 65539, 917503, 0, 65537, 851968, 0, 65538, 851969, 0, 65539, 851993, 0, 1, 851994, 0, 327682, 851995, 0, 65538, 851996, 0, 65538, 851997, 0, 65538, 851998, 0, 65539, 983039, 0, 65537, 917504, 0, 65538, 917505, 0, 327681, 917506, 0, 2, 917507, 0, 2, 917508, 0, 2, 917509, 0, 2, 917510, 0, 2, 917511, 0, 2, 917512, 0, 2, 917513, 0, 2, 917514, 0, 2, 917515, 0, 2, 917516, 0, 2, 917517, 0, 2, 917518, 0, 2, 917519, 0, 2, 917520, 0, 2, 917521, 0, 2, 917522, 0, 2, 917523, 0, 2, 917524, 0, 2, 917525, 0, 2, 917526, 0, 2, 917527, 0, 2, 917528, 0, 2, 917529, 0, 327682, 917530, 0, 65538, 917531, 0, 65538, 917532, 0, 65538, 917533, 0, 65538, 917534, 0, 65539, 1048575, 0, 65537, 983040, 0, 65538, 983041, 0, 65538, 983042, 0, 65538, 983043, 0, 65538, 983044, 0, 65538, 983045, 0, 65538, 983046, 0, 65538, 983047, 0, 65538, 983048, 0, 65538, 983049, 0, 65538, 983050, 0, 65538, 983051, 0, 65538, 983052, 0, 65538, 983053, 0, 65538, 983054, 0, 65538, 983055, 0, 65538, 983056, 0, 65538, 983057, 0, 65538, 983058, 0, 65538, 983059, 0, 65538, 983060, 0, 65538, 983061, 0, 65538, 983062, 0, 65538, 983063, 0, 65538, 983064, 0, 65538, 983065, 0, 65538, 983066, 0, 65538, 983067, 0, 65538, 983068, 0, 65538, 983069, 0, 65538, 983070, 0, 65539, 1114111, 0, 65537, 1048576, 0, 65538, 1048577, 0, 65538, 1048578, 0, 65538, 1048579, 0, 65538, 1048580, 0, 65538, 1048581, 0, 65538, 1048582, 0, 65538, 1048583, 0, 65538, 1048584, 0, 65538, 1048585, 0, 65538, 1048586, 0, 65538, 1048587, 0, 65538, 1048588, 0, 65538, 1048589, 0, 65538, 1048590, 0, 65538, 1048591, 0, 65538, 1048592, 0, 65538, 1048593, 0, 65538, 1048594, 0, 65538, 1048595, 0, 65538, 1048596, 0, 65538, 1048597, 0, 65538, 1048598, 0, 65538, 1048599, 0, 65538, 1048600, 0, 65538, 1048601, 0, 65538, 1048602, 0, 65538, 1048603, 0, 65538, 1048604, 0, 65538, 1048605, 0, 65538, 1048606, 0, 65539, 1179647, 0, 131073, 1114112, 0, 131074, 1114113, 0, 131074, 1114114, 0, 131074, 1114115, 0, 131074, 1114116, 0, 131074, 1114117, 0, 131074, 1114118, 0, 131074, 1114119, 0, 131074, 1114120, 0, 131074, 1114121, 0, 131074, 1114122, 0, 131074, 1114123, 0, 131074, 1114124, 0, 131074, 1114125, 0, 131074, 1114126, 0, 131074, 1114127, 0, 131074, 1114128, 0, 131074, 1114129, 0, 131074, 1114130, 0, 131074, 1114131, 0, 131074, 1114132, 0, 131074, 1114133, 0, 131074, 1114134, 0, 131074, 1114135, 0, 131074, 1114136, 0, 131074, 1114137, 0, 131074, 1114138, 0, 131074, 1114139, 0, 131074, 1114140, 0, 131074, 1114141, 0, 131074, 1114142, 0, 131075 )

[node name="Food" parent="." instance=ExtResource( 6 )]
position = Vector2( 276.274, 144.656 )

[node name="It" parent="." instance=ExtResource( 7 )]
position = Vector2( 203.716, 145.897 )
z_index = 1
god_mode = false

[node name="HandOfFortune" parent="." instance=ExtResource( 4 )]

[node name="BoatPath" type="Path2D" parent="."]
position = Vector2( -0.127293, 1.43356 )
scale = Vector2( 0.993463, 1.0448 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="BoatPath"]
position = Vector2( -32.0824, -32 )
rotation = 0.0364759

[node name="SpawnTImer" type="Timer" parent="BoatPath"]

[node name="Score" type="Label" parent="."]
anchor_right = 1.0
margin_left = -3.05176e-05
margin_top = 1.50941
margin_right = 480.0
margin_bottom = 32.5094
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="Pause" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
autoplay = true

[node name="DeadMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
volume_db = -5.0

[node name="HardTimers" type="Node" parent="."]

[node name="HardTimer1" type="Timer" parent="HardTimers"]
wait_time = 45.0
one_shot = true
autostart = true

[node name="HardTimer2" type="Timer" parent="HardTimers"]
wait_time = 75.0
one_shot = true
autostart = true

[node name="HardTimer3" type="Timer" parent="HardTimers"]
wait_time = 110.0
one_shot = true
autostart = true
[connection signal="player_died" from="It" to="." method="_on_It_player_died"]
[connection signal="timeout" from="BoatPath/SpawnTImer" to="." method="_on_SpawnTImer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="HardTimers/HardTimer1" to="." method="_on_HardTimer1_timeout"]
[connection signal="timeout" from="HardTimers/HardTimer2" to="." method="_on_HardTimer2_timeout"]
[connection signal="timeout" from="HardTimers/HardTimer3" to="." method="_on_HardTimer3_timeout"]

[editable path="TileMap"]
